Fix find lightgray theme and reshow find on load if left open

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -108,6 +108,11 @@ body {
     outline: none;
 }
 
+#find button:disabled,
+#find button:disabled:hover {
+    cursor: not-allowed;
+}
+
 #find button:hover,
 #find button.active:hover {
     cursor: default;
