--- a/src/themes/lightgray.scss
+++ b/src/themes/lightgray.scss
@@ -64,9 +64,12 @@ $panelInsetBackground: "rgb(240, 240, 240)";
     margin: 0px;
     color: #{$color};
     box-sizing: border-box;
-    padding: 0;
     border: 1px solid #{$borderColor};
     padding: 2px;
+}
+
+#commandinput:focus {
+    border: 1px solid adadad;
 }
 
 #buttonbar {
@@ -119,21 +122,24 @@ $panelInsetBackground: "rgb(240, 240, 240)";
 #find {
     top: 5px;
     right: 20px;
-    color: #BBBBBB;
     padding: 2px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
     border-radius: 4px;
     border: 1px solid #{$borderColor};
-    background-color: rgb(40, 0, 0);
+    background-color: #{$panelBackground};
+
+    color: #{$color};
+    text-shadow: 0 1px 0 #fff;
+    
 }
 
 #find input,
 #find input:focus {
     border: 1px solid #{$borderColor};
     width: 100px;
-    background-color: inherit;
-    color: silver;
+    background-color: white;
+    color: black;
     padding: 2px 2px;
     height: 16px;
     top: -1px;
@@ -141,9 +147,8 @@ $panelInsetBackground: "rgb(240, 240, 240)";
 }
 
 #find input:focus {
-    border: 1px solid maroon;
+    border: 1px solid adadad;
     color: #{$color};
-    background: rgba(128, 0, 0, 0.5);
 }
 
 #find button .fa {
@@ -168,9 +173,22 @@ $panelInsetBackground: "rgb(240, 240, 240)";
 
 #find button:hover,
 #find button.active:hover {
-    border: 1px solid #{$color};
-    background-color: #d70000;
     color: #{$color};
+    background-color: #e0e0e0;
+    background-position: 0 -15px;
+    color: #333;
+    border-color: #adadad;
+    text-shadow: 0 1px 0 #fff;    
+}
+
+#find button.active:hover {
+    color: #{$color};
+    background-color: #a0a0a0;
+    background-position: 0 -15px;
+    color: #fff;
+    border-color: #adadad;
+
+    text-shadow: 0 1px 0 #333;    
 }
 
 #find button:active {
@@ -179,15 +197,19 @@ $panelInsetBackground: "rgb(240, 240, 240)";
 
 #find button:disabled,
 #find button:disabled:hover {
+    background-color: inherit !important;
+    background-image: none;
+    box-shadow: none;
+    opacity: .25;
     border: 1px solid transparent;
-    color: #555;
-    background-color: inherit;
+    color: #666;
 }
 
 #find button.active {
-    border: 1px solid maroon;
-    background: rgba(128, 0, 0, 0.5);
-    color: #{$color};
+    background-color: #666;
+    border-color: #ccc;
+    text-shadow: 0 1px 0 #{$color};
+    color: #fff;
 }
 
 #find-count {
