--- a/src/css/characters.scss
+++ b/src/css/characters.scss
@@ -76,7 +76,7 @@ body {
     background-color: #428bca;
 }
 
-.list-group-item::first-letter, #title {
+.list-group-item::first-letter, #title::first-letter {
     text-transform: uppercase;
 }
 
