Add split scroll display support

--- a/src/themes/clean.scss
+++ b/src/themes/clean.scss
@@ -15,6 +15,16 @@ $color: "wheat";
     right: 168px;
 }
 
+#display-split-bar,
+#display-split-ghost-bar {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #33302b;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+    border: 1px solid #{$borderColor};
+}
+
 #command {
     height: 24px;
     bottom: 2px;
