--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,9 +1,14 @@
 $images: "./../../assets";
+html {
+    height: 100%;
+}
+
 body {
     -webkit-user-select: none;
     user-select: none;
     overflow: hidden;
     font-size: 0.8em;
+    height: 100%;
 }
 
 #display-container {
@@ -22,13 +27,11 @@ body {
 
 #display {
     position: absolute;
-    overflow-y: scroll;
-    z-index: 3;
+    z-index: 0;
     overflow-y: scroll;
     -webkit-user-select: auto;
     user-select: auto;
     box-sizing: border-box;
-
     left: 0px;
     right: 0px;
     top: 0px;
@@ -41,6 +44,68 @@ body {
     background-color: black;
     text-shadow: none;
     padding: 2px;
+    /*
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);    
+    */
+}
+
+#display-split {
+    position: absolute;
+    z-index: 3;
+    overflow: hidden;
+    -webkit-user-select: auto;
+    user-select: auto;
+    box-sizing: border-box;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    height: 100%;
+    color: #BBBBBB;
+    border: 0px solid silver;
+    font-family: "Courier New", monospace;
+    text-align: left;
+    font-size: 1em;
+    background-color: black;
+    text-shadow: none;
+    padding: 2px;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+}
+
+#display-split-bar {
+    background-color: menu;
+    height: 4px;
+    cursor: row-resize;
+    position: absolute;
+    background-color: menu;
+    z-index: 1000;
+    width: 100%;
+    right: 0px;
+    box-sizing: border-box;
+}
+
+#display-split-ghost-bar {
+    height: 4px;
+    right: 12px;
+    left: 0;
+    background-color: transparent;
+    opacity: 0.5;
+    position: absolute;
+    cursor: row-resize;
+    z-index: 9991;
+    box-sizing: border-box;
+}
+
+#display-split-frame {
+    height: 20%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 12px;
+    display: none;
+    background-color: black;
+    overflow: hidden;
 }
 
 #display-border {
@@ -88,7 +153,7 @@ body {
 #commandinput {
     outline: none;
     resize: none;
-    overflow:hidden;
+    overflow: hidden;
 }
 
 #commandinput:focus {
@@ -147,6 +212,7 @@ body {
 #find-selection {
     display: none !important;
 }
+
 
 /** status */
 
