--- a/src/css/ansi.scss
+++ b/src/css/ansi.scss
@@ -41,6 +41,7 @@
     margin: 0px;
     display: inline-block;
     padding-top: 1px;
+    pointer-events: none;
 }
 
 .line {
@@ -48,13 +49,16 @@
     word-break: break-all;
     /*width: 100%;*/
     /*display: block;*/
-    display:inline-block;
+    display: inline-block;
     /*padding-bottom: 1px;*/
     box-sizing: border-box;
     clear: both;
     line-height: normal;
     white-space: pre;
     min-width: 100%;
+    /*
+    position: absolute;
+    left: 0;*/
 }
 
 .line hr {
