--- a/src/themes/lightgray.scss
+++ b/src/themes/lightgray.scss
@@ -7,13 +7,12 @@ $panelInsetBackground: "rgb(240, 240, 240)";
     background-color: #{$panelBackground};
 }
 
-#display-container {
+#display {
     left: 34px;
     right: 165px;
     top: 2px;
     bottom: 29px;
     border: 1px solid #{$borderColor};
-    padding: 0px;
 }
 
 #display-border {
