Fix MXP but for images and links

--- a/src/css/ansi.scss
+++ b/src/css/ansi.scss
@@ -36,6 +36,10 @@
     -webkit-animation-duration: 1s;
 }
 
+.background-line .ansi {
+    height: 100%;
+}
+
 .ansi {
     padding: 0px;
     margin: 0px;
