Fix all MXP but for image, font size, and rule

--- a/src/css/ansi.scss
+++ b/src/css/ansi.scss
@@ -72,14 +72,18 @@
 /* --- End CSS for ansi display --- */
 
 .line a,
-.line a:link {
+.line a:link,
+.line a *,
+.line a:link * {
     color: inherit;
     font-weight: inherit;
     text-decoration: underline;
 }
 
 .URLLink,
-.URLLink:link {
+.URLLink:link,
+.URLLink *,
+.URLLink:link * {
     text-decoration: underline;
     cursor: pointer;
 }
