Custom vertical scroll bar, need horizonal and smooth scrolling support

--- a/src/css/ansi.scss
+++ b/src/css/ansi.scss
@@ -56,10 +56,17 @@
     white-space: pre;
     min-width: 100%;
     clear: both;
+    position: absolute;
 }
 
 .line hr {
     border: 0px;
+}
+
+.background-line {
+    position: absolute;
+    overflow: hidden;
+    clear: both;
 }
 
 
