--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -27,9 +27,15 @@ body {
 
 #display {
     position: absolute;
-    z-index: 2;
+    z-index: 0;
     overflow-y: scroll;
+    -webkit-user-select: auto;
+    user-select: auto;
     box-sizing: border-box;
+    left: 0px;
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
     color: #BBBBBB;
     border: 0px solid silver;
     font-family: "Courier New", monospace;
@@ -38,43 +44,10 @@ body {
     background-color: black;
     text-shadow: none;
     padding: 2px;
-    overflow: hidden;
     /*
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);    
     */
-}
-
-#display-view {
-    z-index: 3;
-    position: absolute;
-    top: 2px;
-    left: 0px;
-    /*
-    position: relative;
-    top: 2px;
-    left: 2px;
-    right: 2px;
-    bottom: 2px;
-    */
-}
-
-#display-background {
-    top: 2px;
-    z-index: 1;
-    left: 0px;
-    right: 0px;
-    position: absolute;
-    pointer-events: none;
-}
-
-#display-overlay {
-    top: 2px;
-    z-index: 2;
-    left: 0px;
-    right: 0px;
-    position: absolute;
-    pointer-events: none;
 }
 
 #display-split {
@@ -139,11 +112,6 @@ body {
     position: absolute;
     z-index: 1;
     box-sizing: border-box;
-}
-
-.overlay-line {
-    position: absolute;
-    clear: both;
 }
 
 #Character,
@@ -394,31 +362,3 @@ body {
 
 
 /*end status*/
-
-.select-text {
-    background-color: rgb(51, 153, 255);
-    color: rgb(255, 255, 255);
-    display: inline-block;
-    height: 100%;
-    pointer-events: none;
-    position: absolute;
-    box-sizing: border-box;
-    white-space: pre;
-    overflow: hidden;
-}
-
-.select-text.trc {
-    border-top-right-radius: 4px;
-}
-
-.select-text.tlc {
-    border-top-left-radius: 4px;
-}
-
-.select-text.brc {
-    border-bottom-right-radius: 4px;
-}
-
-.select-text.blc {
-    border-bottom-left-radius: 4px;
-}
