--- a/src/themes/dark.scss
+++ b/src/themes/dark.scss
@@ -3,6 +3,7 @@ $borderColor: "#414141";
 $color: "#d4d4d4";
 $panelBackground: "#1e1e1e";
 $panelInsetBackground: "#252526";
+
 #client {
     background-color: #{$panelBackground};
 }
@@ -66,8 +67,44 @@ $panelInsetBackground: "#252526";
     background-color: #{$panelBackground};
 }
 
-
 /* Let's get this party started */
+.scroll-track {
+    background-color: #{$panelBackground};
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+
+    /*border-radius: 10px;*/
+    border-top: 1px solid #{$borderColor};
+    border-left: 1px solid #{$borderColor};
+}
+
+.scroll-thumb {
+    background: #33302b;
+    border: 1px solid #{$borderColor};
+}
+
+.scroll-thumb:hover {
+    background: #807f7e;
+}
+
+.scroll-thumb:active {
+    background-color: #080808;
+}
+
+.scroll-corner {
+    background-color: #{$panelBackground};
+}
+
+.scroll-horizontal {
+    border-top: 1px solid #{$borderColor};
+}
+
+.scroll-vertical {
+    border-left: 1px solid #{$borderColor};
+}
+
+.scroll-disabled .scroll-thumb, .scroll-disabled .scroll-thumb:hover, .scroll-disabled .scroll-thumb:active {
+    background: rgba(51, 48, 43, 0.4);
+}
 
 #display::-webkit-scrollbar,
 #bars::-webkit-scrollbar {
@@ -75,18 +112,17 @@ $panelInsetBackground: "#252526";
     height: 12px;
 }
 
-
 /* Track */
 
 #display::-webkit-scrollbar-track,
 #bars::-webkit-scrollbar-track {
     background-color: #{$panelBackground};
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+
     /*border-radius: 10px;*/
     border-top: 1px solid #{$borderColor};
     border-left: 1px solid #{$borderColor};
 }
-
 
 /* Handle */
 
@@ -94,8 +130,17 @@ $panelInsetBackground: "#252526";
 #bars::-webkit-scrollbar-thumb {
     /*border-radius: 10px;*/
     background: #33302b;
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
     border: 1px solid #{$borderColor};
+}
+
+#display::-webkit-scrollbar-thumb:hover,
+#bars::-webkit-scrollbar-thumb:hover {
+    background: #807f7e;
+}
+
+#display::-webkit-scrollbar-thumb:active,
+#bars::-webkit-scrollbar-thumb:active {
+    background: #080808;
 }
 
 #display::-webkit-scrollbar-thumb:window-inactive,
@@ -106,6 +151,7 @@ $panelInsetBackground: "#252526";
 #display::-webkit-scrollbar-corner,
 #bars::-webkit-scrollbar-corner {
     background-color: #{$panelBackground};
+
     /*
     border-top:1px solid #{$borderColor};
     border-left:1px solid #{$borderColor};
@@ -121,7 +167,7 @@ $panelInsetBackground: "#252526";
     font-size: 1em;
     border-radius: 4px;
     border: 1px solid #{$borderColor};
-    background-color : #{$panelBackground};
+    background-color: #{$panelBackground};
 }
 
 #find input,
@@ -220,7 +266,6 @@ $panelInsetBackground: "#252526";
     border-radius: 4px;
     background: rgb(116, 192, 114);
 }
-
 
 /* begin status */
 
@@ -638,6 +683,7 @@ $panelInsetBackground: "#252526";
     width: 118px;
     -webkit-border-radius: 6px;
     border-radius: 6px;
+
     /* future proofing */
     background: -webkit-linear-gradient(left, rgba(255, 50, 50, 1) 0%, rgba(255, 157, 0, 1) 25%, rgba(255, 255, 0, 1) 50%, rgba(189, 252, 0, 1) 75%, rgba(0, 255, 0, 1) 100%);
     background: linear-gradient(to right, rgba(255, 50, 50, 1) 0%, rgba(255, 157, 0, 1) 25%, rgba(255, 255, 0, 1) 50%, rgba(189, 252, 0, 1) 75%, rgba(0, 255, 0, 1) 100%);
@@ -677,9 +723,7 @@ $panelInsetBackground: "#252526";
     padding-bottom: 4px;
 }
 
-
 /** end stats **/
-
 
 /** button stats */
 
@@ -730,7 +774,7 @@ $panelInsetBackground: "#252526";
 }
 
 .button:hover svg, .button.on:hover svg {
-    fill: #fff
+    fill: #fff;
 }
 
 .button:active {
@@ -760,7 +804,5 @@ $panelInsetBackground: "#252526";
 .button.on:active svg {
     fill: #{$color};
 }
-
-
 
 /** button end */
