--- a/src/themes/default.scss
+++ b/src/themes/default.scss
@@ -1,6 +1,7 @@
 $images: "./../../assets";
 $borderColor: "#908271";
 $color: "wheat";
+
 #display {
     left: 35px;
     right: 181px;
@@ -77,15 +78,55 @@ $color: "wheat";
     bottom: 0;
 }
 
-
 /* Let's get this party started */
+
+.scroll-track {
+    background-color: #191814;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+
+.scroll-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #33302b;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+    border: 1px solid #{$borderColor};
+}
+
+.scroll-thumb:hover {
+    background: #988f7f;
+}
+
+.scroll-thumb:active {
+    background-color: #544f46;
+}
+
+.scroll-corner {
+    background-color: black;
+    display:none;
+}
+
+.scroll-horizontal {
+    border-top: 1px solid #494238;
+}
+
+.scroll-vertical {
+    border-left: 1px solid #494238;
+}
+
+.scroll-disabled .scroll-thumb, .scroll-disabled .scroll-thumb:hover, .scroll-disabled .scroll-thumb:active {
+    background: rgba(51, 48, 43, 0.4);
+}
 
 #display::-webkit-scrollbar,
 #bars::-webkit-scrollbar {
     width: 12px;
     height: 12px;
 }
-
 
 /* Track */
 
@@ -99,7 +140,6 @@ $color: "wheat";
     border: 1px solid #494238;
 }
 
-
 /* Handle */
 
 #display::-webkit-scrollbar-thumb,
@@ -110,6 +150,16 @@ $color: "wheat";
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
     border: 1px solid #{$borderColor};
+}
+
+#display::-webkit-scrollbar-thumb:hover,
+#bars::-webkit-scrollbar-thumb:hover {
+    background: #988f7f;
+}
+
+#display::-webkit-scrollbar-thumb:active,
+#bars::-webkit-scrollbar-thumb:active {
+    background: #544f46;
 }
 
 #display::-webkit-scrollbar-thumb:window-inactive,
@@ -225,7 +275,6 @@ $color: "wheat";
     border-radius: 4px;
     background: rgb(116, 192, 114);
 }
-
 
 /* begin status */
 
@@ -651,6 +700,7 @@ $color: "wheat";
     width: 118px;
     -webkit-border-radius: 6px;
     border-radius: 6px;
+
     /* future proofing */
     background: -webkit-linear-gradient(left, rgba(255, 50, 50, 1) 0%, rgba(255, 157, 0, 1) 25%, rgba(255, 255, 0, 1) 50%, rgba(189, 252, 0, 1) 75%, rgba(0, 255, 0, 1) 100%);
     background: linear-gradient(to right, rgba(255, 50, 50, 1) 0%, rgba(255, 157, 0, 1) 25%, rgba(255, 255, 0, 1) 50%, rgba(189, 252, 0, 1) 75%, rgba(0, 255, 0, 1) 100%);
@@ -690,9 +740,7 @@ $color: "wheat";
     padding-bottom: 4px;
 }
 
-
 /** end stats **/
-
 
 /** button stats */
 
@@ -758,6 +806,5 @@ $color: "wheat";
     background-image: none;
     border: 1px solid #{$color};
 }
-
 
 /** button end */
