Update selection and overlines as lines removed

--- a/src/themes/dark.scss
+++ b/src/themes/dark.scss
@@ -78,7 +78,7 @@ $panelInsetBackground: "#252526";
 }
 
 .scroll-thumb {
-    background: #33302b;
+    background: #8e8e8e;
     border: 1px solid #{$borderColor};
 }
 
@@ -87,7 +87,7 @@ $panelInsetBackground: "#252526";
 }
 
 .scroll-thumb:active {
-    background-color: #080808;
+    background-color: #c7c7c7;
 }
 
 .scroll-corner {
