Add MXP hr tag support, disable MXP font until varible character width/height added

--- a/src/css/ansi.scss
+++ b/src/css/ansi.scss
@@ -59,6 +59,14 @@
     position: absolute;
 }
 
+.ansi .hr {
+    position:relative;
+    top: 50%;
+    transform: translateY(-50%);
+    height:4px;
+    width:100%;    
+}
+
 .line hr {
     border: 0px;
 }
