--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -7,7 +7,7 @@ body {
     -webkit-user-select: none;
     user-select: none;
     overflow: hidden;
-    font-size: 0.8em;
+    font-size: 14px;
     height: 100%;
 }
 
@@ -159,6 +159,7 @@ body {
     left: -100px;
     margin: 0px;
     text-decoration: underline overline;
+    line-height: normal;
 }
 
 #command {
@@ -239,6 +240,10 @@ body {
 
 #find-count {
     display: inline-block;
+    width: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 4px;
+    text-align: center;
 }
 
 #find-selection {
