--- a/src/css/ied.scss
+++ b/src/css/ied.scss
@@ -91,11 +91,11 @@ body {
 }
 
 #local .panel-heading, #remote .panel-heading {
-    min-height:30px;
+    min-height: 30px;
 }
 
 .path-container {
-    display:inline-block;
+    display: inline-block;
     position: absolute;
     top: 2px;
 }
@@ -152,12 +152,82 @@ body {
     top: 4px;
 }
 
-
 #local .path-buttons {
-    right:8px;
+    right: 8px;
 }
 
+.dropdown-menu a.active2 {
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#9eceff+0,3399ff+100 */
+    background: #3399ff;
+
+    /* Old browsers */
+    background: -moz-linear-gradient(top, #9eceff 0%, #3399ff 100%);
+
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #9eceff 0%, #3399ff 100%);
+
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #9eceff 0%, #3399ff 100%);
+
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9eceff', endColorstr='#3399ff',GradientType=0 );
+
+    /* IE6-9 */
+    color: white;
+}
+
+.dropdown-menu > li > a:focus, .dropdown-menu > li > a.active {
+    background-color: #e8e8e8;
+    background-image: -webkit-linear-gradient(top, #f5f5f5 0, #e8e8e8 100%);
+    background-image: -o-linear-gradient(top, #f5f5f5 0, #e8e8e8 100%);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#f5f5f5), to(#e8e8e8));
+    background-image: linear-gradient(to bottom, #f5f5f5 0, #e8e8e8 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe8e8e8', GradientType=0);
+    background-repeat: repeat-x;
+}
+
+#local-list td:nth-child(1), #remote-list td:nth-child(1) {
+    width: 200px !important;
+    text-overflow: ellipsis;
+    white-space:nowrap;
+}
 
 #local-list td:nth-child(2), #remote-list td:nth-child(2) {
     text-align: right;
+    width: 200px !important;
+    text-overflow: ellipsis;
+    white-space:nowrap;
+}
+
+#local-list td:nth-child(3), #remote-list td:nth-child(3) {
+    width: 200px !important;
+    text-overflow: ellipsis;
+    white-space:nowrap;
+}
+
+#local-list td:nth-child(4), #remote-list td:nth-child(4) {
+    width: 200px !important;
+    text-overflow: ellipsis;
+    white-space:nowrap;
+}
+
+#local-list tr{
+    height: 20px;
+}
+
+#local-list {
+    height: auto !important;
+}
+
+
+#local-navigate, #remote-navigate {
+    overflow: auto;
+}
+
+#local .col-sm-12, #remote .col-sm-12 {
+    padding: 0;
+}
+
+#local .row, #remote .row {
+    margin: 0px;
 }
