--- a/src/css/ied.scss
+++ b/src/css/ied.scss
@@ -5,28 +5,32 @@ body {
     user-select: none;
 }
 
-#toolbar {
+.btn-toolbar {
     background-color: menu;
     margin-left: 2px;
     margin-right: 2px;
     padding-top: 2px;
     padding-bottom: 2px;
+    top: 0;
+    position: absolute;
+    left: 0;
+    right: 0;    
 }
 
-#toolbar .btn {
+.btn-toolbar .btn {
     outline: none !important;
 }
 
-#toolbar button {
+.btn-toolbar button, .panel-heading button {
     min-width: 26px;
 }
 
-#toolbar label {
+.btn-toolbar label {
     margin-bottom: 0 !important;
 }
 
 #main {
-    top: 26px;
+    top: 0px;
     bottom: 250px;
     left: 0;
     right: 0;
@@ -91,13 +95,13 @@ body {
 }
 
 #local .panel-heading, #remote .panel-heading {
-    min-height: 30px;
+    min-height: 60px;
 }
 
 .path-container {
     display: inline-block;
     position: absolute;
-    top: 2px;
+    top: 32px;
 }
 
 .path-container input {
@@ -106,13 +110,13 @@ body {
 }
 
 #local .path-container {
-    right: 60px;
-    left: 45px;
+    right: 38px;
+    left: 4px;
 }
 
 #remote .path-container {
-    left: 57px;
-    right: 28px;
+    left: 4px;
+    right: 4px;
 }
 
 .path-container .input-group {
@@ -149,7 +153,7 @@ body {
 .path-buttons {
     position: absolute;
     right: 2px;
-    top: 4px;
+    top: 34px;
 }
 
 #local .path-buttons {
