--- a/src/css/ied.scss
+++ b/src/css/ied.scss
@@ -14,7 +14,7 @@ body {
     top: 0;
     position: absolute;
     left: 0;
-    right: 0;    
+    right: 0;
 }
 
 .btn-toolbar .btn {
@@ -193,36 +193,35 @@ body {
 #local-list td:nth-child(1), #remote-list td:nth-child(1) {
     width: 200px !important;
     text-overflow: ellipsis;
-    white-space:nowrap;
+    white-space: nowrap;
 }
 
 #local-list td:nth-child(2), #remote-list td:nth-child(2) {
     text-align: right;
     width: 200px !important;
     text-overflow: ellipsis;
-    white-space:nowrap;
+    white-space: nowrap;
 }
 
 #local-list td:nth-child(3), #remote-list td:nth-child(3) {
     width: 200px !important;
     text-overflow: ellipsis;
-    white-space:nowrap;
+    white-space: nowrap;
 }
 
 #local-list td:nth-child(4), #remote-list td:nth-child(4) {
     width: 200px !important;
     text-overflow: ellipsis;
-    white-space:nowrap;
+    white-space: nowrap;
 }
 
-#local-list tr, #remote-list tr {
+#local-list tr, #remote-list tr, #queue-list tr {
     height: 20px;
 }
 
-#local-list, #remote-list {
+#local-list, #remote-list, #queue-list {
     height: auto !important;
 }
-
 
 #local-navigate, #remote-navigate {
     overflow: auto;
@@ -240,10 +239,83 @@ table.dataTable {
     outline: none;
 }
 
-table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
+#local-list table.dataTable tbody > tr.selected,
+#local-list table.dataTable tbody > tr > .selected,
+#remote-list table.dataTable tbody > tr.selected,
+#remote-list table.dataTable tbody > tr > .selected {
     /*background-color: #08C;*/
     background-color: #969696 !important;
 }
-table.dataTable.focused tbody>tr.selected, table.dataTable.focused tbody>tr>.selected {
+
+#local-list table.dataTable.focused tbody > tr.selected,
+#local-list table.dataTable.focused tbody > tr > .selected,
+#remote-list table.dataTable.focused tbody > tr.selected,
+#remote-list table.dataTable.focused tbody > tr > .selected {
     background-color: #08C !important;
+}
+
+#queue-list td:nth-child(1) {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+#queue-list td:nth-child(2) {
+    text-align: center;
+    white-space: nowrap;
+    width: 30px !important;
+}
+
+#queue-list td:nth-child(3) {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+#queue-list td:nth-child(4) {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 150px !important;
+}
+
+#queue-list_wrapper .dataTables_scrollHead th:nth-child(2) {
+    text-align: center;
+    padding-right: 5px;
+}
+
+.progressbar {
+    border: 1px solid #ececec;
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+
+    /* future proofing */
+    background: -webkit-linear-gradient(left, rgba(255, 50, 50, 1) 0%, rgba(255, 157, 0, 1) 25%, rgba(255, 255, 0, 1) 50%, rgba(189, 252, 0, 1) 75%, rgba(0, 255, 0, 1) 100%);
+    background: linear-gradient(to right, rgba(255, 50, 50, 1) 0%, rgba(255, 157, 0, 1) 25%, rgba(255, 255, 0, 1) 50%, rgba(189, 252, 0, 1) 75%, rgba(0, 255, 0, 1) 100%);
+}
+
+.progressbar {
+    float: right;
+    position: relative;
+    width: 100%;
+    height: 20px;
+    overflow: hidden;
+}
+
+.progressbar .progressbar-text {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    text-align: center;
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+    color: black;
+}
+
+.progressbar .progressbar-value {
+    float: right;
+    height: 100%;
+}
+
+.progressbar .progressbar-value {
+    height: 100%;
+    width: 0%;
+    background-color: white;
 }
