--- a/src/css/ied.scss
+++ b/src/css/ied.scss
@@ -286,9 +286,22 @@ table.dataTable {
     -webkit-border-radius: 6px;
     border-radius: 6px;
 
-    /* future proofing */
-    background: -webkit-linear-gradient(left, rgba(255, 50, 50, 1) 0%, rgba(255, 157, 0, 1) 25%, rgba(255, 255, 0, 1) 50%, rgba(189, 252, 0, 1) 75%, rgba(0, 255, 0, 1) 100%);
-    background: linear-gradient(to right, rgba(255, 50, 50, 1) 0%, rgba(255, 157, 0, 1) 25%, rgba(255, 255, 0, 1) 50%, rgba(189, 252, 0, 1) 75%, rgba(0, 255, 0, 1) 100%);
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#46961e+0,b5d875+100 */
+    background: #46961e;
+
+    /* Old browsers */
+    background: -moz-linear-gradient(left, #46961e 0%, #b5d875 100%);
+
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, #46961e 0%, #b5d875 100%);
+
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, #46961e 0%, #b5d875 100%);
+
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#46961e', endColorstr='#b5d875',GradientType=1 );
+
+    /* IE6-9 */
 }
 
 .progressbar {
@@ -318,4 +331,8 @@ table.dataTable {
     height: 100%;
     width: 0%;
     background-color: white;
+}
+
+.dataTables_scrollHead th {
+    white-space: nowrap;
 }
