Add queue resizing

--- a/src/css/immortal.scss
+++ b/src/css/immortal.scss
@@ -3,6 +3,8 @@ body {
     overflow: hidden;
     -webkit-user-select: none;
     user-select: none;
+    height:100%;
+    width:100%;
 }
 
 .btn-toolbar {
