--- a/src/css/immortal.scss
+++ b/src/css/immortal.scss
@@ -3,8 +3,8 @@ body {
     overflow: hidden;
     -webkit-user-select: none;
     user-select: none;
-    height:100%;
-    width:100%;
+    height: 100%;
+    width: 100%;
 }
 
 .btn-toolbar {
@@ -89,7 +89,7 @@ body {
     position: absolute;
     top: 0px;
     left: 0px;
-    right: 0px;    
+    right: 0px;
 }
 
 #btm-ghost-bar {
@@ -375,4 +375,16 @@ table.dataTable {
 
 .dataTables_scrollHead th {
     white-space: nowrap;
+}
+
+#log-view {
+    user-select: text;
+    margin: 0;
+    position: absolute;
+    top: 28px;
+    left: 2px;
+    right: 2px;
+    bottom: 0px;
+    border: 1px solid rgb(221, 221, 221);
+    overflow: auto;
 }
