--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -9,6 +9,7 @@ body {
     overflow: hidden;
     font-size: 14px;
     height: 100%;
+    line-height: normal !important;
 }
 
 #display-container {
@@ -439,4 +440,19 @@ body {
 
 .select-text.blc, .find-highlight.blc {
     border-bottom-left-radius: 4px;
+}
+
+.dialog-footer {
+    background-color: #F5F5F5;
+    box-shadow: inset 0 1px 0 #fff;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 5px;
+    border-top: 1px solid #ddd;
+}
+
+.dialog-footer .btn {
+    margin: 5px;
 }
