Fix default with for local/remote list

--- a/src/css/immortal.scss
+++ b/src/css/immortal.scss
@@ -173,6 +173,7 @@ body {
     top: 0;
     bottom: 0;
     padding-right: 4px;
+    width: 50%;
 }
 
 #local .panel, #remote .panel {
@@ -184,6 +185,7 @@ body {
     right: 0;
     top: 0;
     bottom: 0;
+    width: 50%;
 }
 
 .path-buttons {
