--- a/src/themes/dark.scss
+++ b/src/themes/dark.scss
@@ -104,6 +104,7 @@ $panelInsetBackground: "#252526";
 
 .scroll-disabled .scroll-thumb, .scroll-disabled .scroll-thumb:hover, .scroll-disabled .scroll-thumb:active {
     background: rgba(51, 48, 43, 0.4);
+    border: 0px;
 }
 
 #display::-webkit-scrollbar,
