--- a/src/themes/default.scss
+++ b/src/themes/default.scss
@@ -2,6 +2,10 @@ $images: "./../../assets";
 $borderColor: "#908271";
 $color: "wheat";
 
+body {
+    background-color:black;
+}
+
 #display {
     left: 35px;
     right: 181px;
@@ -120,6 +124,7 @@ $color: "wheat";
 
 .scroll-disabled .scroll-thumb, .scroll-disabled .scroll-thumb:hover, .scroll-disabled .scroll-thumb:active {
     background: rgba(51, 48, 43, 0.4);
+    border: 0px;
 }
 
 #display::-webkit-scrollbar,
