Adjust status sidebar font sizes

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -325,6 +325,7 @@ body {
 
 #experience {
     position: absolute;
+    font-size: 12px;
 }
 
 #experience div span:first-child {
@@ -365,6 +366,7 @@ body {
 #body {
     position: absolute;
     box-sizing: border-box;
+    font-size: 12px;
 }
 
 #body svg {
